testcases/negative/invalid_group_syntax.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
invalid..group.TEL:+1-555-1234
END:VCARD
